# python-project-template

./: .coveragerc  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  environment.yaml  noxfile.py  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  test.yaml
docs/: _config.yml  intro.md  markdown-notebooks.md  markdown.md  notebooks.ipynb
src/ssec_project/: __init__.py  hello.py
ssec_project/: __init__.py  hello.py
